--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,1 @@
-paramiko
--e git+https://github.com/jupyter/jupyterhub.git#egg=jupyterhub
--e git+https://github.com/ipython/ipython.git#egg=ipython[notebook]
+jupyterhub
